--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ script:
    - npm run build
 
 deploy:
-  local_dir: /dist
+  local_dir: dist
   provider: pages
   skip_cleanup: true
   github_token: $GITHUB_TOKEN
