--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "ng serve",
-    "build": "ng build --prod",
+    "build": "ng build --prod --base-href https://alexmbrown.github.io/dev-tools/",
     "pretest": "ng lint --fix",
     "test": "ng test --single-run",
     "e2e": "ng e2e"
