--- a/package.json
+++ b/package.json
@@ -13,19 +13,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.4.3",
-    "@angular/cdk": "^2.0.0-beta.11",
+    "@angular/cdk": "^2.0.0-beta.12",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/core": "^4.2.4",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
-    "@angular/material": "^2.0.0-beta.11",
+    "@angular/material": "^2.0.0-beta.12",
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
     "diff": "^3.3.1",
     "hammerjs": "^2.0.8",
+    "pretty-data": "^0.40.0",
     "prismjs": "^1.8.1",
     "remark": "^8.0.0",
     "remark-html": "^6.0.1",
